Fix footer and content being covered

--- a/app/assets/stylesheets/1st_load_framework.css.scss
+++ b/app/assets/stylesheets/1st_load_framework.css.scss
@@ -39,7 +39,7 @@ main {
   padding-bottom: 80px;
   width: 100%;
   margin-top: 51px; // accommodate the navbar
-  margin-left: 250px; // accommodate the navbar
+/*  margin-left: 250px; // accommodate the navbar */
   }
 section {
   @extend .row;
