--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -39,22 +39,16 @@ div.nobreak:before { clear:both; }
 div.nobreak { page-break-inside: avoid; }
 div.page-break { display:block; clear:both; page-break-after:always; }
 body {
-  height: 100%;
-  padding-bottom: 40px;
+  height: 100vh;
 }
 
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
   position: relative;
-  min-height: 100%;
 }
-body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
-}
-.footer {
-  position: fixed;
+.xfooter {
+  position: absolute;
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
@@ -68,13 +62,42 @@ body {
 -------------------------------------------------- */
 /* Not required for template or sticky footer method. */
 
-body > .container {
-  padding: 15px 15px 0; 
+body > .outer-container > .container {
+  /* padding: 15px 15px 0; */
+  position: relative;
+  width: 100%;
+  min-height: 100%;
 }
 
-.footer > .container {
-  padding-right: 15px;
-  padding-left: 15px;
+body > .outer-container {
+  position: relative;
+  width: 100%;
+  min-height: 100%;
+}
+
+body > .outer-container > .container > .footer {
+/*  padding-right: 15px;
+  padding-left: 15px; */
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  line-height: 50px; /* Vertically center the text there */
+  background-color: #f5f5f5;
+}
+#content-wrap {
+  flex-direction: column;
+  justify-content: space-around;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  justify-content: space-around;
+  height: 100%;
+  margin-bottom: 60px;
+}
+
+.field {
+    width: 100px;
 }
 dd {
     display: block;
